--- a/go/Makefile
+++ b/go/Makefile
@@ -6,3 +6,9 @@ serve: build
 
 run-dev:
 	go run cmd/udp-server/main.go
+
+docker-build:
+	DOCKER_BUILDKIT=1 docker build -t go-udp-server:latest .
+
+docker-run:
+	docker run --rm -d -p 3000:3000 -p 3000:3000/udp --name go-udp-server go-udp-server:latest
